<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/nometela1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/digite_o_nome"/>

    <TextView
        android:id="@+id/emailtela1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/digite_o_email"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/buttontela1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/obter_dados"/>

        <Button
            android:id="@+id/buttontela11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rejeitar_dados"/>

    </LinearLayout>
</LinearLayout>